# server/src/routes/resume.routes.ts
@@ -11,7 +11,7 @@ router.post(
 );
 router.post("/resumes/:resumeId/analyze", resumeController.analyzeResume);
 router.get("/resumes", resumeController.getAllResumes);
-router.get("/resumes/", resumeController.getResume)
+router.get("/resumes/:resumeId", resumeController.getResume);
 
 router.delete("/resumes/:resumeId", resumeController.removeResume);
 router.delete("/resumes", resumeController.removeAllResumes);
